--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -411,31 +411,24 @@
               </div>{{- /* END USER ORDERS */ -}}
 
               {{- /* RECENT MATCHES */ -}}
-              <div class="d-flex flex-column align-items-stretch">
-                <div class="market-header text-center fs14 py-1 brdrleft">
-                  [[[Recent Matches]]]
-                </div>
-                <div class=" brdrleft flex-grow-1 bg1 position-relative">
-                  <div class="stylish-overflow">
-                    <table id="recentMatchesTable" class="ordertable">
-                      <thead>
-                        <tr>
-                          <th data-ordercol="stamp">[[[Time]]] <span class="ico-arrowdown"></span></th>
-                          <th data-ordercol="rate">[[[Rate]]] <span class="ico-arrowdown"></span></th>
-                          <th data-ordercol="qty">[[[Quantity]]] <span class="ico-arrowdown"></span></th>
-                          <th class="last"></th>
-                        </tr>
-                      </thead>
-                      <tbody id="recentMatchesLiveList">
-                        <tr id="recentMatchesTemplate">
-                          <td data-tmpl="age"></td>
-                          <td data-tmpl="rate"></td>
-                          <td data-tmpl="qty"></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
+              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4">
+                <div id="userOrdersHeader" class="text-center fs20 sans-light my-1">[[[Recent Matches]]]</div>
+                <table id="recentMatchesTable" class="ordertable">
+                  <thead>
+                    <tr>
+                      <th data-ordercol="age">[[[Age]]] <span class="ico-arrowdown"></span></th>
+                      <th data-ordercol="rate" class="text-end pe-2"><span class="ico-arrowdown"></span> [[[Rate]]]</th>
+                      <th data-ordercol="qty" class="text-end"><span class="ico-arrowdown"></span> [[[Quantity]]]</th>
+                    </tr>
+                  </thead>
+                  <tbody id="recentMatchesLiveList">
+                    <tr id="recentMatchesTemplate">
+                      <td data-tmpl="age"></td>
+                      <td data-tmpl="rate" class="text-end pe-2"></td>
+                      <td data-tmpl="qty" class="text-end"></td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>{{- /* END RECENT MATCHES */ -}}
 
             </div>
