--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -200,6 +200,10 @@ body.dark {
       &:last-child {
         border-top: 1px solid $dark_border_color;
       }
+
+      tbody#sellRows {
+        border-top: none;
+      }
     }
   }
 }
