--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -106,7 +106,7 @@
 
           {{- /* ORDER BOOK */ -}}
           <div class="d-flex flex-column orderbook">
-            <div class="stylish-overflow hoveronly overflow-x-hidden flex-grow-1 ordertable-wrap">
+            <div class="stylish-overflow hoveronly overflow-x-hidden flex-grow-1 ordertable-wrap reversible">
 
               {{- /* SELL ORDER LIST */ -}}
               <table class="ordertable">
