ui: fix market view bugs

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -336,3 +336,9 @@ button.form-button {
     position: absolute;
   }
 }
+
+.deposit-address {
+  font-size: 15px;
+  padding: 5px 10px;
+  border: 1px solid $light_border_color;
+}
