--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -183,6 +183,11 @@ body.dark {
       background-color: $dark_body_bg;
     }
   }
+
+  #marketReopener {
+    border-color: $dark_border_color;
+    background-color: $dark_body_bg;
+  }
 }
 
 @include media-breakpoint-up(lg) {
