--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -119,7 +119,7 @@
   <span id="depositName"></span>
 </div>
 <img class="mb-3" id="qrcode" />
-<div class="mono bg0 p-2 fs15">
+<div class="mono deposit-address select-all">
   <span id="depositAddress"></span>
   <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18"></span>
   <span id="copyAlert" class="d-hide">[[[copied]]]</span>
@@ -515,8 +515,8 @@
       <span class="fs20 me-1" data-tmpl="parentBal">0</span>
       <span class="fs16 grey unit" data-tmpl="parentBalUnit">XYZ</span>
     </div>
-    <div class="fs14 mt-1">[[[Your Deposit Address]]]</div>
-    <div class="fs14 mono bg0 p-1 select-all" data-tmpl="depoAddr"></div>
+    <div class="fs14 mt-2">[[[Your Deposit Address]]]</div>
+    <div class="mono deposit-address select-all my-1" data-tmpl="depoAddr"></div>
     <span data-tmpl="sendEnough">[[[Send enough for reg fee]]]</span>
     <span data-tmpl="sendEnoughWithEst">[[[Send enough with estimate]]]</span>
     <span data-tmpl="sendEnoughForToken">[[[Send funds for token]]]</span>
