--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -291,6 +291,7 @@ div[data-handler=markets] {
     #marketSearchV1 {
       @extend .fill-abs;
 
+      width: 100%; // firefox needs, for some reason
       z-index: 2;
       background-color: transparent;
       font-size: 25px;
@@ -314,22 +315,6 @@ div[data-handler=markets] {
 
       &:focus + .ico-search {
         display: none;
-      }
-    }
-
-    #leftHider {
-      padding: 0 5px;
-      border-left-style: solid;
-      border-color: $light_border_color;
-      border-width: 1px;
-
-      .ico-arrowback {
-        transform: scaleX(0.5);
-        opacity: 0.5;
-      }
-
-      &:hover .ico-arrowback {
-        opacity: 1;
       }
     }
 
@@ -595,6 +580,39 @@ div[data-handler=markets] {
       }
     }
   }
+
+  #leftHider {
+    border-left-style: solid;
+    padding: 0 5px;
+  }
+
+  #marketReopener {
+    display: none;
+    border-style: none solid solid none;
+    padding: 10px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $light_body_bg;
+    z-index: 10;
+  }
+
+  #leftHider,
+  #marketReopener {
+    border-color: $light_border_color;
+    border-width: 1px;
+
+    .ico-arrowback,
+    .ico-arrowright {
+      transform: scaleX(0.5);
+      opacity: 0.5;
+    }
+
+    &:hover .ico-arrowback,
+    &:hover .ico-arrowright {
+      opacity: 1;
+    }
+  }
 }
 
 .market-stats-v1 {
@@ -818,6 +836,10 @@ div[data-handler=markets] {
         overflow-x: hidden;
         border-style: none none none solid;
       }
+    }
+
+    #leftColumnV1.stashed + #marketReopener {
+      display: block;
     }
   }
 
