--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -6,7 +6,7 @@
   <div class="flex-center fs28 text-break">{{.Exchange.Host}}</div>
   <div class="flex-center fs16 mb-2">
     <span class="me-2 connection ico-connection d-hide" id="connectedIcon"></span>
-    <span class="me-2 disconnected ico-disconnected d-hide" id="disconnectedIcon"></span>
+    <span class="me-2 errcolor ico-disconnected d-hide" id="disconnectedIcon"></span>
     <span id="connectionStatus"></span>
   </div>
   <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="errMsg"></div>
