--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -21,7 +21,7 @@
           <div class="ico-search fs22"></div>
         </div>
         <div id="leftHider" class="flex-center pointer hoverbg">
-          <span class="ico-arrowback fs24">
+          <span class="ico-arrowback d-inline-block fs24">
         </div>
       </div>
 
@@ -31,7 +31,7 @@
             <div class="flex-center">
               <img data-tmpl="baseIcon">
               <img data-tmpl="quoteIcon" class="ms-1">
-              <span class="disconnected ico-disconnected d-hide" id="disconnectedIcon"></span>
+              <span class="errcolor ico-disconnected d-hide ps-1" data-tmpl="disconnectedIco"></span>
             </div>
             <div class="d-flex flex-column pe-4 ps-2 flex-grow-1">
               <span class="fs17 demi">
@@ -47,6 +47,10 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div id="marketReopener" class="flex-center pointer hoverbg">
+    <span class="ico-arrowright d-inline-block fs24">
   </div>
 
   {{- /* MAIN CONTENT */ -}}
@@ -410,8 +414,10 @@
                 </div>
               </div>{{- /* END USER ORDERS */ -}}
 
+              <a href="/orders" class="flex-center my-2 plainlink">[[[view order history]]]</a>
+
               {{- /* RECENT MATCHES */ -}}
-              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4">
+              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4 mt-2">
                 <div id="userOrdersHeader" class="text-center fs20 sans-light my-1">[[[Recent Matches]]]</div>
                 <table id="recentMatchesTable" class="ordertable">
                   <thead>
