nowrap table headers

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -422,9 +422,9 @@
                 <table id="recentMatchesTable" class="ordertable">
                   <thead>
                     <tr>
-                      <th data-ordercol="age">[[[Age]]] <span class="ico-arrowdown"></span></th>
-                      <th data-ordercol="rate" class="text-end pe-2"><span class="ico-arrowdown"></span> [[[Rate]]]</th>
-                      <th data-ordercol="qty" class="text-end"><span class="ico-arrowdown"></span> [[[Quantity]]]</th>
+                      <th data-ordercol="age" class="text-nowrap">[[[Age]]] <span class="ico-arrowdown"></span></th>
+                      <th data-ordercol="rate" class="text-end pe-2 text-nowrap"><span class="ico-arrowdown"></span> [[[Rate]]]</th>
+                      <th data-ordercol="qty" class="text-end text-nowrap"><span class="ico-arrowdown"></span> [[[Quantity]]]</th>
                     </tr>
                   </thead>
                   <tbody id="recentMatchesLiveList">
