--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -28,10 +28,13 @@
       <div class="flex-grow-1 overflow-y-hidden">
         <div id="marketListV1" class="stylish-overflow hoveronly overflow-x-hidden">
           <div id="marketTmplV1" class="market-tmpl-v1 d-flex align-items-stretch p-2 my-1 pointer hoverbg">
-            <div class="flex-center">
-              <img data-tmpl="baseIcon">
-              <img data-tmpl="quoteIcon" class="ms-1">
-              <span class="errcolor ico-disconnected d-hide ps-1" data-tmpl="disconnectedIco"></span>
+            <div class="flex-center flex-column me-1">
+              <div class="d-flex align-items-start justify-content-start flex-grow-1">
+                <img data-tmpl="baseIcon">
+                <img data-tmpl="quoteIcon" class="ms-1">
+                <span class="errcolor ico-disconnected d-hide ps-1" data-tmpl="disconnectedIco"></span>
+              </div>
+              <div class="fs10 demi text-start dexname" data-tmpl="host"></div>
             </div>
             <div class="d-flex flex-column pe-4 ps-2 flex-grow-1">
               <span class="fs17 demi">
