--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -70,6 +70,7 @@
             <span data-tmpl="baseSymbol"></span>-<span data-tmpl="quoteSymbol"></span>
           </div>
           <span class="ico-arrowdown fs8 grey ms-1"></span>
+          <span class="ico-arrowup fs8 grey ms-1"></span>
         </div>
   
         <div class="data-point">
