--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -34,7 +34,7 @@
                 <img data-tmpl="quoteIcon" class="ms-1">
                 <span class="errcolor ico-disconnected d-hide ps-1" data-tmpl="disconnectedIco"></span>
               </div>
-              <div class="fs10 demi text-start dexname" data-tmpl="host"></div>
+              <div class="fs10 demi text-start text-nowrap dexname" data-tmpl="host"></div>
             </div>
             <div class="d-flex flex-column pe-4 ps-2 flex-grow-1">
               <span class="fs17 demi">
