--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -17,7 +17,7 @@
 
       <div class="d-flex align-items-stretch" id="searchBoxV1">
         <div class="flex-grow-1 p-1 position-relative">
-          <input type="text" id="marketSearchV1" spellcheck="false">
+          <input type="text" id="marketSearchV1"  placeholder=" " spellcheck="false" class="my-1">
           <div class="ico-search fs22"></div>
         </div>
         <div id="leftHider" class="flex-center pointer hoverbg">
