add top border to recent matches

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -359,7 +359,7 @@
               </div>
 
               {{- /* USER ORDERS */ -}}
-              <div id="userOrdersHeader" class="text-center fs20 sans-light my-1">[[[Your Orders]]]</div>
+              <div class="text-center fs20 sans-light my-1">[[[Your Orders]]]</div>
               <div id="userNoOrders" class="p-3 flex-center fs16 grey">no active orders</div>
               <div id="userOrders" class="mb-3">
                 <div id="userOrderTmpl" class="user-order">
@@ -421,8 +421,8 @@
               <a href="/orders" class="flex-center my-2 plainlink">[[[view order history]]]</a>
 
               {{- /* RECENT MATCHES */ -}}
-              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4 mt-2">
-                <div id="userOrdersHeader" class="text-center fs20 sans-light my-1">[[[Recent Matches]]]</div>
+              <div id=recentMatchesBox  class="d-flex flex-column align-items-stretch px-3 pb-4 mt-2 brdrtop">
+                <div class="text-center fs20 sans-light my-3">[[[Recent Matches]]]</div>
                 <table id="recentMatchesTable" class="ordertable">
                   <thead>
                     <tr>
