--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -3,6 +3,7 @@
 <html lang="[[[Language]]]">
 <head data-turbolinks-eval="false">
   <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {{- /* The above 2 meta tags *must* come first in the head; any other head content must come *after* these tags */ -}}
   <link rel="icon" href="/img/favicon.png?v=AK4XS4">
