--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -9,7 +9,7 @@
   <div class="px-5">
     <div class="px-1 py-2">
       <span class="fs22 demi me-2">[[[Order]]]</span>
-      <span class="fs18">{{$ord.ID}}</span>
+      <span class="fs18" dir="ltr">{{$ord.ID}}</span>
       <span class="float-end me-2"><a href="/orders" class="d-inline-block subtlelink fs15"><span class="fs12 ico-textfile"></span> [[[see all orders]]]</a></span>
     </div>
     {{- /* DATA CARDS */ -}}
