--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -102,7 +102,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=odfVl8g"></script>
+<script src="/js/entry.js?v=cYXx7p"></script>
 </body>
 </html>
 {{end}}
