--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -34,7 +34,7 @@
         <div>
           <span id="status">{{$ord.StatusString}}</span>
           {{if $ord.Cancelable}}
-            <span id="cancelBttn" class="ico-cross fs12 ms-1 pointer hoverbg" data-tooltip="cancel order"></span>
+            <span id="cancelBttn" class="ico-cross fs12 ms-1 pointer hoverbg" data-tooltip="[[[cancel_order]]]"></span>
           {{end}}
         </div>
       </div>
