client: Refactor Login
client/core:
- Login is updated not return a LoginResult. It only returns an error if
  the password is incorrect. On the first login after startup or after a
  logout, the wallets are connected, active trades are resolved, and the
  dex connections are authed. On subsequent logins, only the password is
  checked.
- The new Core method, Notifications is are added.
- resolveActiveTrades is now called not only from login, but also after
  a wallet is unlocked. Trades that failed to resume on the initial call
  to resolveActiveTrades are cached on the dexConnection and when wallets
  are later unlocked, resolveActiveTrades is called again in order to
  attempt to resume those trades.

client/webserver:
- /api/getnotes is added.

ui:
- /api/getnotes is called after login to retrieve existing notifications
  since this is now removed from login.

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -122,6 +122,14 @@ div[data-handler=markets] {
     }
   }
 
+  #unreadyOrdersMsg {
+    color: red;
+  }
+
+  .unready-user-order {
+    background-color: #6e0909;
+  }
+
   .user-order {
     margin: 0 20px;
     border: 1px solid $light_border_color;
