app: Logout with active orders error
Previously if the user tried to log out while there were active deals,
there would be no feedback. Now, an error message is displayed.

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -81,6 +81,7 @@
     <div class="icon fs20 ico-profile p-1" id="innerProfileIcon"></div>
     <span class="demi hoverbg pointer" id="profileSignout">[[[Sign Out]]]</span>
     <a href="/orders" class="demi hoverbg plainlink pt-2">[[[Order History]]]</a>
+    <span class="errcolor" id="logoutErr"></span>
   </div>
 
 </header>
