--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -411,7 +411,7 @@
 {{$passwordIsCached := .UserInfo.PasswordIsCached}}
 <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
 <div class="text-center fs22 sans-light position-relative">
-  [[[Accelerate_Order]]]
+  [[[:title:accelerate_order]]]
 </div>
 <div id=accelerateMainDiv>
   <div id="configureAccelerationDiv">
