remove duplicate cancel_order translation and fix review

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -386,7 +386,7 @@
 {{$passwordIsCached := .UserInfo.PasswordIsCached}}
 <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
 <div class="text-center fs22 sans-light position-relative">
-  [[[Cancel Order]]]
+  [[[:title:cancel_order]]]
 </div>
 <div class="mt-2 sans-light">
   {{if $passwordIsCached}}[[[cancel_no_pw]]]{{else}}[[[cancel_pw]]]{{end}}
