remove duplicate translations

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -195,7 +195,7 @@
         <thead>
           <tr>
             <th class="grey">[[[Market]]]</th>
-            <th class="grey">[[[Lot Size]]]</th>
+            <th class="grey">[[[:title:lot_size]]]</th>
           </tr>
         </thead>
         <tbody data-tmpl="markets">
@@ -228,7 +228,7 @@
       <thead>
         <tr>
           <th class="grey">[[[Market]]]</th>
-          <th class="grey">[[[Lot Size]]]</th>
+          <th class="grey">[[[:title:lot_size]]]</th>
         </tr>
       </thead>
       <tbody data-tmpl="allMarkets"></tbody>
