--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -65,15 +65,15 @@
                   <tbody>
                     <tr id="statusLocked">
                       <td class="grey">[[[Status]]]</td>
-                      <td><span class="ico-locked fs14 me-2"></span>[[[Locked]]]</td>
+                      <td><span class="ico-locked fs14 me-2"></span>[[[:title:locked]]]</td>
                     </tr>
                     <tr id="statusReady">
                       <td class="grey">[[[Status]]]</td>
-                      <td><span class="ico-unlocked fs14 me-2"></span>[[[Ready]]]</td>
+                      <td><span class="ico-unlocked fs14 me-2"></span>[[[:title:ready]]]</td>
                     </tr>
                     <tr id="statusOff">
                       <td class="grey">[[[Status]]]</td>
-                      <td><span class="ico-sleeping fs14 me-2"></span>[[[Off]]]</td>
+                      <td><span class="ico-sleeping fs14 me-2"></span>[[[:title:off]]]</td>
                     </tr>
                     <tr id="statusDisabled">
                       <td class="grey">[[[Status]]]</td>
@@ -131,8 +131,8 @@
                   <tr>
                     <th>[[[Market]]]</th>
                     <th class="d-none d-md-table-cell d-lg-none d-xxl-table-cell">[[[Host]]]</th>
-                    <th>[[[Price]]]</th>
-                    <th>[[[Volume]]]</th>
+                    <th>[[[:title:price]]]</th>
+                    <th>[[[:title:volume]]]</th>
                   </tr>
                 </thead>
                 <tbody id="availableMarkets" class="fs17">
