--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -74,7 +74,7 @@
         </div>
   
         <div class="data-point">
-          <span class="label grey">Price</span>
+          <span class="label grey">[[[:title:price]]]</span>
           <div class="flex-center me-2">
             <span data-tmpl="price"></span>
             <div data-tmpl="change" class="ms-2"></div>
@@ -87,7 +87,7 @@
           </div>
     
           <div class="data-point">
-            <span class="label grey">Volume</span>
+            <span class="label grey">[[[:title:volume]]]</span>
             <div class="flex-center me-2">
               <div data-tmpl="volume">-</div>
             </div>
@@ -234,7 +234,7 @@
                   {{- /* MARKET CONFIG */ -}}
                   <div class="d-flex justify-content-between my-2 fs14">
                     <div>
-                      [[[Lot Size]]]:
+                      [[[:title:lot_size]]]:
                       <span id="lotSize"></span>
                       <span data-unit="base"></span>
                     </div>
@@ -264,7 +264,7 @@
 
                   {{- /* RATE AND QUANTITY INPUTS */ -}}
                   <div class="d-flex mt-3" id="priceBox">
-                    <label for="rateField" class="form-label col-6 d-flex align-items-center p-0">[[[Price]]]</label>
+                    <label for="rateField" class="form-label col-6 d-flex align-items-center p-0">[[[:title:price]]]</label>
                     <div class="col-18 p-0 position-relative">
                       <input type="number" class="form-control select bg1" id="rateField">
                       <span class="unitbox"><span class="unit" data-unit="quote"></span>/<span class="unit" data-unit="base"></span></span>
@@ -274,7 +274,7 @@
                     <label for="qtyField" class="form-label col-6 d-flex align-items-center p-0">[[[Quantity]]]</label>
                     <div class="col-6 p-0 position-relative">
                       <input type="number" class="form-control select bg1" id="lotField">
-                      <span class="unit unitbox">[[[Lots]]]</span>
+                      <span class="unit unitbox">[[[:title:lots]]]</span>
                     </div>
                     <div class="col-1 p-0"></div> {{/* spacer */}}
                     <div class="col-11 p-0 position-relative">
@@ -298,7 +298,7 @@
                     <div class="p-0 fs14 flex-center mt-1">
                       <span>
                         ~ <span id="mktBuyScore">0</span> <span data-unit="base"></span>
-                        @ <span id="mktBuyLots">0</span> <span >[[[Lots]]]</span><br>
+                        @ <span id="mktBuyLots">0</span> <span >[[[:title:lots]]]</span><br>
 
                       </span>
                     </div>
@@ -487,7 +487,7 @@
         {{- /* Price, Quantity, Total Section */ -}}
         <div id="verifyLimit">
           <div class="d-flex align-items-center justify-content-between">
-            <span class="grey fs17 flex-grow-1 text-start">[[[Price]]]</span>
+            <span class="grey fs17 flex-grow-1 text-start">[[[:title:price]]]</span>
             <span id="vRate" class="fs18 demi"></span>
             <span class="grey fs14 ms-2">
               <sup data-unit="quote"></sup>/<sub data-unit="base"></sub>
