--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -28,19 +28,19 @@
   <a href="/" class="logo-icon d-none d-md-block"></a>
   <a href="/" class="logo-icon d-block d-md-none"></a>
   <div id="headerSpace"></div>
-  <div class="mainlinks fs18 offwhite pe-3">
+  <div class="mainlinks fs18 offwhite pe-2">
 
     <a href="/markets" class="demi hoverbg{{if not $marketsReady}} d-hide{{end}}" id="marketsMenuEntry">[[[Markets]]]</a>
 
     <a href="/wallets" class="demi hoverbg{{if not $authed}} d-hide{{end}}" id="walletsMenuEntry">[[[Wallets]]]</a>
 
     <div class="d-inline-block position-relative hoverbg{{if not $authed}} d-hide{{end}}" id="noteBell">
-      <span class="ico-bell fs20  p-2"></span>
+      <span class="ico-bell fs20 p-2"></span>
       <div id="noteIndicator" class="d-hide"></div>
     </div>
 
-    <div class="d-inline-block position-relative{{if not $authed}} d-hide{{end}}" id="profileMenuEntry">
-      <span class="ico-hamburger fs20 hoverbright" id="profileIcon"></span>
+    <div class="d-inline-block hoverbg position-relative" id="burgerIcon">
+      <span class="ico-hamburger fs20 p-2"></span>
     </div>
 
   </div>
@@ -76,17 +76,17 @@
   </div>
 
   <div id="profileBox" class="d-hide">
-    <div class="icon fs20 ico-hamburger p-1" id="innerProfileIcon"></div>
-    <div class="demi hoverbright pointer d-flex align-items-center py-1" id="profileSignout">
+    <div class="icon fs20 ico-hamburger p-1" id="innerBurgerIcon"></div>
+    <div class="demi hoverbright pointer d-flex align-items-center py-1 authed-only" id="profileSignout">
       <span class="ico-profile fs16 me-2"></span>
       [[[Sign Out]]]
     </div>
     <span class="errcolor" id="logoutErr"></span>
-    <a href="/orders" class="demi hoverbright plainlink d-flex align-items-center py-1">
+    <a href="/orders" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-settings fs16 me-2"></span>
       [[[Order History]]]
     </a>
-    <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1">
+    <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
